# rust-kafka-click-analytics-example

./: docker-compose.yml
kafka-service/: Dockerfile  server.properties
rust-service/: Cargo.toml  Dockerfile
rust-service/src/: consumers.rs  events.rs  main.rs  producers.rs  samplers.rs
